<?xml version="1.0"?>
<package format="3">
  <name>minkindr_conversions</name>
  <version>0.0.0</version>
  <description>Conversions between minkindr and ROS messages and TF.</description>
  <maintainer email="helenoleynikova@gmail.com">Helen Oleynikova</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gflags_vendor</build_depend>
  <build_depend>glog_vendor</build_depend>

  <build_depend>minkindr</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
